--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -43,5 +43,12 @@
     color: #52AA5E; /* couleur pour les liens non actifs */
 }
 
+.hover-cart {
+    &:hover {
+        scale: 1.15;
+    }
+    transition: all 0.3s ease-in-out;
+}
+
 
 
