--- a/templates/home/sections/deals.html.twig
+++ b/templates/home/sections/deals.html.twig
@@ -1,64 +1,50 @@
-<section class="py-12 pt-md-24 pb-md-12">
-	<div class="container">
-		<div class="mw-sm mw-md-xl mx-auto mw-lg-none">
-			<div class="text-center mb-12">
-				<span class="fw-medium text-primary">Sélection du moment</span>
-				<h1 class="fs-5 text-black mt-3 mb-0">Petits prix, c'est le moment de craquer</h1>
-			</div>
-			<div class="row mb-n6">
-				<div class="col-12 col-md-6 col-lg-3 mb-6">
-					<div class="pt-4 pb-2 px-4 border border-dark-light">
-						<img class="d-block mb-4 w-100 img-fluid" src="vendia-assets/images/item-cards/decoration1.png" alt="" style="height: 258px; object-fit: cover;">
-						<div>
-							<div class="d-flex mb-2 align-items-center justify-content-between">
-								<span class="fs-10 text-muted">Cleanser</span>
-								<span class="fs-10 text-primary fw-bold">$ 56.00 USD</span>
-							</div>
-							<h6 class="fw-medium text-black mb-4">Wooden Tool</h6>
-							<a class="btn btn-sm w-100 btn-primary h6" href="#">Ajouter au Panier</a>
-						</div>
+<section class="my-20 flex">
+	<div class="d-flex flex-column  justify-content-center align-items-center ">
+		<h5>C'est le moment de <del> croquer </del> craquer !</h3>
+		<h6>Découvrez nos meilleures affaires</h6>
+	</div>
+
+
+	{% for product in topDiscountedProducts %}
+		<div class="col-md-4 mb-4">
+			<div class="card card-custom position-relative">
+				<div class="card-price">{{(product.price / 100) | number_format(2, ',', '')}}€</div>
+				{% if product.images|length > 0 %}
+					{% set image = product.images.first %}
+					<img src="{{ asset('images/products/' ~ image.imageName) }}" style="width: 200px; height: 150px" class="card-img-top object-fit-cover " alt="...">
+				{% else %}
+					<img src="{{ asset('/images/product-placeholder.png') }}" class="card-img-top" alt="...">
+				{% endif %}
+				<div class="card-custom-body p-3">
+					<div class="d-flex flex-column ">
+						<a href="/product/{{product.slug}}" class="h6" style="height: 70px;">{{ product.name }}</a>
+						<p class="small-font-size">{{ product.description }}</p>
 					</div>
-				</div>
-				<div class="col-12 col-md-6 col-lg-3 mb-6">
-					<div class="pt-4 pb-2 px-4 border border-dark-light">
-						<img class="d-block mb-4 w-100 img-fluid" src="vendia-assets/images/item-cards/decoration4.png" alt="" style="height: 258px; object-fit: cover;">
-						<div>
-							<div class="d-flex mb-2 align-items-center justify-content-between">
-								<span class="fs-10 text-muted">Cleanser</span>
-								<span class="fs-10 text-primary fw-bold">$ 56.00 USD</span>
+					<div class="d-flex justify-content-between align-items-center w-100 ">
+						<div class="d-flex justify-content-center align-items-center gap-3">
+							<p class="small-font-size text-center">
+								{{ product.origin}}
+							</p>
+							<div>
+								{% for label in product.qualitylabels %}
+									{% if label.label == 'Bio' %}
+										<img src="{{ asset('/images/bio-label.png') }}" style='width: 25px' alt="Bio">
+									{% elseif label.label == 'Commerce équitable' %}
+										<img src="{{ asset('/images/fairtrade-label.png') }}" style='width: 25px' alt="Commerce équitable">
+									{% elseif label.label == 'Agriculture raisonnée' %}
+										<img src="{{ asset('/images/raison-label.png') }}" style='width: 40px' alt="Agriculture raisonnée">
+									{% endif %}
+								{% endfor %}
 							</div>
-							<h6 class="fw-medium text-black mb-4">Clay Cups</h6>
-							<a class="btn btn-sm w-100 btn-primary" href="#">Ajouter au Panier</a>
+
 						</div>
-					</div>
-				</div>
-				<div class="col-12 col-md-6 col-lg-3 mb-6">
-					<div class="pt-4 pb-2 px-4 border border-dark-light">
-						<img class="d-block mb-4 w-100 img-fluid" src="vendia-assets/images/item-cards/decoration3.png" alt="" style="height: 258px; object-fit: cover;">
-						<div>
-							<div class="d-flex mb-2 align-items-center justify-content-between">
-								<span class="fs-10 text-muted">Cleanser</span>
-								<span class="fs-10 text-primary fw-bold">$ 56.00 USD</span>
-							</div>
-							<h6 class="fw-medium text-black mb-4">Indoor Plant</h6>
-							<a class="btn btn-sm w-100 btn-primary" href="#">Ajouter au Panier</a>
-						</div>
-					</div>
-				</div>
-				<div class="col-12 col-md-6 col-lg-3 mb-6">
-					<div class="pt-4 pb-2 px-4 border border-dark-light">
-						<img class="d-block mb-4 w-100 img-fluid" src="vendia-assets/images/item-cards/decoration2.png" alt="" style="height: 258px; object-fit: cover;">
-						<div>
-							<div class="d-flex mb-2 align-items-center justify-content-between">
-								<span class="fs-10 text-muted">Cleanser</span>
-								<span class="fs-10 text-primary fw-bold">$ 56.00 USD</span>
-							</div>
-							<h6 class="fw-medium text-black mb-4">Pink Sweater</h6>
-							<a class="btn btn-sm w-100 btn-primary" href="#">Ajouter au Panier</a>
-						</div>
+
+						<a href="#" class="">
+							<img src="{{ asset('/images/cart.svg') }}" class="hover-cart" style="width: 25px" alt="shopping cart">
+						</a>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-</section>
+	{% endfor %}
+	<section class="my-12 flex"></>
