--- a/templates/home/sections/deals.html.twig
+++ b/templates/home/sections/deals.html.twig
@@ -1,50 +1,67 @@
-<section class="my-20 flex">
-	<div class="d-flex flex-column  justify-content-center align-items-center ">
-		<h5>C'est le moment de <del> croquer </del> craquer !</h3>
+<section class="mt-32 mb-8">
+	<div class="text-center">
+		<h5 class="">C'est le moment de
+			<del>croquer</del>
+			craquer !</h5>
 		<h6>Découvrez nos meilleures affaires</h6>
 	</div>
 
+	<div class="row mt-10">
+		{% for product in topDiscountedProducts %}
+			<div class="col-md-3 mb-4 ">
+				<div class="card card-custom-deals position-relative">
+					<div class="card-price d-flex flex-column">
+						<span class"h6">
+							{{(product.price / 100) | number_format(2, ',', '')}}€ /
+							{{product.volume}}</span>
+						<span>
+							<del>{{ ((product.price / 100) / (1 - (product.discount / 100))) | number_format(2, ',', '') }}€</del>
 
-	{% for product in topDiscountedProducts %}
-		<div class="col-md-4 mb-4">
-			<div class="card card-custom position-relative">
-				<div class="card-price">{{(product.price / 100) | number_format(2, ',', '')}}€</div>
-				{% if product.images|length > 0 %}
-					{% set image = product.images.first %}
-					<img src="{{ asset('images/products/' ~ image.imageName) }}" style="width: 200px; height: 150px" class="card-img-top object-fit-cover " alt="...">
-				{% else %}
-					<img src="{{ asset('/images/product-placeholder.png') }}" class="card-img-top" alt="...">
-				{% endif %}
-				<div class="card-custom-body p-3">
-					<div class="d-flex flex-column ">
-						<a href="/product/{{product.slug}}" class="h6" style="height: 70px;">{{ product.name }}</a>
-						<p class="small-font-size">{{ product.description }}</p>
+
+						</span>
 					</div>
-					<div class="d-flex justify-content-between align-items-center w-100 ">
-						<div class="d-flex justify-content-center align-items-center gap-3">
-							<p class="small-font-size text-center">
-								{{ product.origin}}
-							</p>
-							<div>
-								{% for label in product.qualitylabels %}
-									{% if label.label == 'Bio' %}
-										<img src="{{ asset('/images/bio-label.png') }}" style='width: 25px' alt="Bio">
-									{% elseif label.label == 'Commerce équitable' %}
-										<img src="{{ asset('/images/fairtrade-label.png') }}" style='width: 25px' alt="Commerce équitable">
-									{% elseif label.label == 'Agriculture raisonnée' %}
-										<img src="{{ asset('/images/raison-label.png') }}" style='width: 40px' alt="Agriculture raisonnée">
-									{% endif %}
-								{% endfor %}
+					<div class="card-discount">
+						<img src="{{ asset('/images/discount.png') }}" class="card-discount-svg" alt="discount">
+						<span class"discount-number">-{{ product.discount }}%</span>
+					</div>
+					{% if product.images|length > 0 %}
+						{% set image = product.images.first %}
+						<img src="{{ asset('images/products/' ~ image.imageName) }}" style="width: 200px; height: 150px" class="card-img-top object-fit-cover " alt="...">
+					{% else %}
+						<img src="{{ asset('/images/product-placeholder.png') }}" class="card-img-top" alt="...">
+					{% endif %}
+					<div class="card-custom-body p-3">
+						<div class="d-flex flex-column ">
+							<a href="/product/{{product.slug}}" class="h6" style="height: 70px;">{{ product.name }}</a>
+							<p class="small-font-size">{{ product.description }}</p>
+						</div>
+						<div class="d-flex justify-content-between align-items-center w-100 ">
+							<div class="d-flex justify-content-center align-items-center gap-3">
+								<span class="small-font-size text-center">
+									{{ product.origin}}
+								</span>
+								<div>
+									{% for label in product.qualitylabels %}
+										{% if label.label == 'Bio' %}
+											<img src="{{ asset('/images/bio-label.png') }}" style='width: 25px' alt="Bio">
+										{% elseif label.label == 'Commerce équitable' %}
+											<img src="{{ asset('/images/fairtrade-label.png') }}" style='width: 25px' alt="Commerce équitable">
+										{% elseif label.label == 'Agriculture raisonnée' %}
+											<img src="{{ asset('/images/raison-label.png') }}" style='width: 40px' alt="Agriculture raisonnée">
+										{% endif %}
+									{% endfor %}
+								</div>
+
 							</div>
 
+							<a href="#" class="">
+								<img src="{{ asset('/images/cart.svg') }}" class="hover-cart" style="width: 25px" alt="shopping cart">
+							</a>
 						</div>
-
-						<a href="#" class="">
-							<img src="{{ asset('/images/cart.svg') }}" class="hover-cart" style="width: 25px" alt="shopping cart">
-						</a>
 					</div>
 				</div>
+
 			</div>
-		</div>
-	{% endfor %}
-	<section class="my-12 flex"></>
+		{% endfor %}
+	</div>
+</section>
