--- a/templates/home/sections/findProduct.html.twig
+++ b/templates/home/sections/findProduct.html.twig
@@ -62,9 +62,9 @@
 										</div>
 										<div class="d-flex justify-content-between align-items-center w-100 ">
 											<div class="d-flex justify-content-center align-items-center gap-3">
-												<p class="small-font-size text-center">
+												<span class="small-font-size text-center">
 													{{ product.origin}}
-												</p>
+												</span>
 												<div>
 													{% for label in product.qualitylabels %}
 														{% if label.label == 'Bio' %}
