feat: add several categories

--- a/templates/home/sections/categories.html.twig
+++ b/templates/home/sections/categories.html.twig
@@ -5,14 +5,14 @@
 			<div class="row mx-lg-n8">
 				<div class="col-12 col-lg-4 px-lg-8 mb-12 mb-lg-0 d-flex flex-column justify-content-center align-items-center ">
 					<a class="d-block" href="#">
-						<img class="d-block mb-8 rounded-3 object-fit-cover" style="width: 250px; height: 300px " src="{{asset("/images/collections-boissons.jpg")}}" alt=""></a>
+						<img class="d-block mb-8 rounded-3 object-fit-cover" style="width: 250px; height: 300px " src="{{asset("/images/collections-eau.jpg")}}" alt=""></a>
 					<div class="mw-xs mx-auto text-center">
 						<div class="d-block" href="#">
 							<h5 class="text-black mb-3">Boissons</h5>
-							<p class="text-muted mb-5">Pour accompagner un bons repas, pour célébrer un événement ou pour partager un moment entre amis.</p>
+							<p class="text-muted mb-5">De la fraîcheur jusqu'au raffinement : retrouvez de quoi vous désaltérer et vous faire plaisir.</p>
 						</div>
 						<a class="d-inline-fex align-items-center fw-medium text-primary" href="#">
-							<span class="me-3">Découvrir notre cave</span>
+							<span class="me-3">Découvrir nos boissons</span>
 							<svg width="11" height="12" viewbox="0 0 11 12" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<path d="M2.95669 1.75742L9.55635 1.75742M9.55635 1.75742L9.55635 8.35709M9.55635 1.75742L1.07107 10.2427" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
 							</svg>
@@ -21,14 +21,14 @@
 				</div>
 				<div class="col-12 col-lg-4 px-lg-8 mb-12 mb-lg-0 d-flex flex-column justify-content-center align-items-center">
 					<a class="d-block" href="#">
-						<img class="d-block mb-8 rounded-3 object-fit-cover" style="width: 250px; height: 300px " src="{{asset("/images/collections-gourmet.jpg")}}" alt=""></a>
+						<img class="d-block mb-8 rounded-3 object-fit-cover" style="width: 250px; height: 300px " src="{{asset("/images/collections-oeufs.jpg")}}" alt=""></a>
 					<div class="mw-xs mx-auto text-center">
 						<div class="d-block" href="#">
-							<h5 class="text-black mb-3">Gourmet & Charcuterie</h5>
-							<p class="text-muted mb-5">Cheminez à travers de nombreux terroirs, à la découverte de produits d'exception.</p>
+							<h5 class="text-black mb-3">Crèmerie & Oeufs</h5>
+							<p class="text-muted mb-5">Parce qu'ils sont indispensables pour faire des gâteaux, quiches et dans la cuisine de tous les jours.</p>
 						</div>
 						<a class="d-inline-fex align-items-center fw-medium text-primary" href="#">
-							<span class="me-3">Découvrir nos produits</span>
+							<span class="me-3">Découvrir notre rayon</span>
 							<svg width="11" height="12" viewbox="0 0 11 12" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<path d="M2.95669 1.75742L9.55635 1.75742M9.55635 1.75742L9.55635 8.35709M9.55635 1.75742L1.07107 10.2427" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
 							</svg>
@@ -41,10 +41,64 @@
 					<div class="mw-xs mx-auto text-center">
 						<div class="d-block" href="#">
 							<h5 class="text-black mb-3">Fruits & Légumes</h5>
-							<p class="text-muted mb-5">Locaux, de saison, dégustez notre sélection venue tout droit du jardin des maraîchers.</p>
+							<p class="text-muted mb-5">Locaux, de saison, dégustez notre fruits et légumes soigneusement sélectionnées par nous.</p>
 						</div>
 						<a class="d-inline-fex align-items-center fw-medium text-primary" href="#">
-							<span class="me-3">Découvrir nos saveurs</span>
+							<span class="me-3">Découvrir notre arrivage</span>
+							<svg width="11" height="12" viewbox="0 0 11 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path d="M2.95669 1.75742L9.55635 1.75742M9.55635 1.75742L9.55635 8.35709M9.55635 1.75742L1.07107 10.2427" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+							</svg>
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="container mt-12">
+		<div class="mw-lg mx-auto mw-lg-none">
+			<div class="row mx-lg-n8">
+				<div class="col-12 col-lg-4 px-lg-8 mb-12 mb-lg-0 d-flex flex-column justify-content-center align-items-center ">
+					<a class="d-block" href="#">
+						<img class="d-block mb-8 rounded-3 object-fit-cover" style="width: 250px; height: 300px " src="{{asset("/images/collections-sale.jpg")}}" alt=""></a>
+					<div class="mw-xs mx-auto text-center">
+						<div class="d-block" href="#">
+							<h5 class="text-black mb-3">Epicerie Salée</h5>
+							<p class="text-muted mb-5">Pâtes, riz, conserves, nos avons tous les indispensables pour tous les goûts et les budgets.</p>
+						</div>
+						<a class="d-inline-fex align-items-center fw-medium text-primary" href="#">
+							<span class="me-3">Découvrir notre épicerie</span>
+							<svg width="11" height="12" viewbox="0 0 11 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path d="M2.95669 1.75742L9.55635 1.75742M9.55635 1.75742L9.55635 8.35709M9.55635 1.75742L1.07107 10.2427" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+							</svg>
+						</a>
+					</div>
+				</div>
+				<div class="col-12 col-lg-4 px-lg-8 mb-12 mb-lg-0 d-flex flex-column justify-content-center align-items-center">
+					<a class="d-block" href="#">
+						<img class="d-block mb-8 rounded-3 object-fit-cover" style="width: 250px; height: 300px " src="{{asset("/images/collections-viande.jpg")}}" alt=""></a>
+					<div class="mw-xs mx-auto text-center">
+						<div class="d-block" href="#">
+							<h5 class="text-black mb-3">Boucherie & Charcuterie</h5>
+							<p class="text-muted mb-5">Nous travaillons avec des élèveurs passionnées par leur métier, pour vous founir la meilleure viande.</p>
+						</div>
+						<a class="d-inline-fex align-items-center fw-medium text-primary" href="#">
+							<span class="me-3">Découvrir nos viandes</span>
+							<svg width="11" height="12" viewbox="0 0 11 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path d="M2.95669 1.75742L9.55635 1.75742M9.55635 1.75742L9.55635 8.35709M9.55635 1.75742L1.07107 10.2427" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+							</svg>
+						</a>
+					</div>
+				</div>
+				<div class="col-12 col-lg-4 px-lg-8 mb-12 mb-lg-0 d-flex flex-column justify-content-center align-items-center">
+					<a class="d-block" href="#">
+						<img class="d-block mb-8 rounded-3 object-fit-cover" style="width: 250px; height: 300px " src="{{asset("/images/collections-hygiene.jpg")}}" alt=""></a>
+					<div class="mw-xs mx-auto text-center">
+						<div class="d-block" href="#">
+							<h5 class="text-black mb-3">Entretien & Hygiène</h5>
+							<p class="text-muted mb-5">Retrouvez tous nos indispensables pour prendre soin de vous et de votre maison</p>
+						</div>
+						<a class="d-inline-fex align-items-center fw-medium text-primary" href="#">
+							<span class="me-3">Découvrir notre rayon</span>
 							<svg width="11" height="12" viewbox="0 0 11 12" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<path d="M2.95669 1.75742L9.55635 1.75742M9.55635 1.75742L9.55635 8.35709M9.55635 1.75742L1.07107 10.2427" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
 							</svg>
