--- a/templates/home/sections/banner.html.twig
+++ b/templates/home/sections/banner.html.twig
@@ -3,7 +3,7 @@
 		<div class="col-12 col-lg-6">
 			<div class="container mb-lg-0 mb-10">
 				<div class="pt-12 mw-md mx-auto">
-					<span class="mb-4 h5">Epicerie fine</span>
+					<span class="mb-4 h5">Epicerie Culinaria</span>
 					<h2 class="mt-6 mb-16 mb-lg-10">Le goût de l'authenticité</h2>
 					<a class="btn btn-secondary" href="#">Tous nos produits</a>
 				</div>
