feat: add category page for each cat

--- a/templates/home/sections/findProduct.html.twig
+++ b/templates/home/sections/findProduct.html.twig
@@ -1,5 +1,6 @@
-<section class="py-20" id="search-products">
-	<div class="container ">
+<section class="py-12" id="search-products">
+	<h5 class="text-center">Tous nos produits</h5>
+	<div class="container pt-8">
 		<div class="row">
 			<div class="col-12 col-md-12">
 				<div class="container">
