feat: add an all products page (catalogue)

--- a/templates/_partials/_header.html.twig
+++ b/templates/_partials/_header.html.twig
@@ -17,7 +17,7 @@
 				</div>
 				<ul class="navbar-nav me-2 mb-2 mb-lg-0 mx-auto px-xxl-12">
 					<li class="nav-item">
-						<a class="nav-link" aria-current="page" href="#">Catalogue</a>
+						<a class="nav-link" aria-current="page" href="/product">Catalogue</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" aria-current="page" href="#">A propos</a>
