--- a/templates/_partials/_header.html.twig
+++ b/templates/_partials/_header.html.twig
@@ -53,6 +53,9 @@
 									<a class="dropdown-item" href="{{path('admin')}}">Pannel administration</a>
 								</li>
 								<li>
+									<a class="dropdown-item" href="{{path('app_profile')}}">Profil</a>
+								</li>
+								<li>
 									<a class="dropdown-item" href="{{path('app_logout')}}">Se déconnecter</a>
 								</li>
 								{# elseif he is admin	 #}
