--- a/templates/home/sections/findProduct.html.twig
+++ b/templates/home/sections/findProduct.html.twig
@@ -8,21 +8,23 @@
 						{% for product in productsInPage %}
 							<div class="col-md-3 mb-4">
 								<div class="card card-custom position-relative">
-									{% if product.discount > 0 %}
-										<div class="card-discount">
-											<img src="{{ asset('/images/discount.png') }}" class="card-discount-svg" alt="discount">
-											<span class"discount-number">-{{ product.discount }}%</span>
-										</div>
-									{% endif %}
-									<div class="card-price">{{ ((product.price / 100) - ((product.price / 100) * (product.discount / 100))) | number_format(2, ',', '') }}€ /
-										{{product.volume}}</div>
-									{% if product.images|length > 0 %}
-										{% set image = product.images.first %}
-										<img src="{{ asset('images/products/' ~ image.imageName) }}" style="width: 200px; height: 150px" class="card-img-top object-fit-cover " alt="...">
-									{% else %}
-										<img src="{{ asset('/images/product-placeholder.png') }}" style="width:100%; height: 170px" class="card-img-top object-fit-cover" alt="...">
+									<a href="/product/{{product.slug}}">
 
+										{% if product.discount > 0 %}
+											<div class="card-discount">
+												<img src="{{ asset('/images/discount.png') }}" class="card-discount-svg" alt="discount">
+												<span class"discount-number">-{{ product.discount }}%</span>
+											</div>
+										{% endif %}
+										<div class="card-price">{{ ((product.price / 100) - ((product.price / 100) * (product.discount / 100))) | number_format(2, ',', '') }}€ /
+											{{product.volume}}</div>
+										{% if product.images|length > 0 %}
+											{% set image = product.images.first %}
+											<img src="{{ asset('images/products/' ~ image.imageName) }}" style="width: 200px; height: 150px" class="card-img-top object-fit-cover " alt="...">
+										{% else %}
+											<img src="{{ asset('/images/product-placeholder.png') }}" style="width:100%; height: 170px" class="card-img-top object-fit-cover" alt="...">
 
+										</a>
 									{% endif %}
 									<div class="card-custom-body p-3">
 										<div class="d-flex flex-column ">
