feat: add a a cart

--- a/templates/_partials/_header.html.twig
+++ b/templates/_partials/_header.html.twig
@@ -124,7 +124,9 @@
 		</a>
 	</div>
 </div>
-<input class="form-control mb-10 py-5 px-8 bg-light border-0" type="search" placeholder="Search">
+<a href="">
+	<input class="form-control mb-10 py-5 px-8 bg-light border-0" type="search" placeholder="Search">
+</a>
 <ul class="list-unstyled mb-0 h4">
 	<li class="mb-8">
 		<a class="link-dark text-decoration-none" href="#">Category</a>
