--- a/templates/home/sections/findProduct.html.twig
+++ b/templates/home/sections/findProduct.html.twig
@@ -50,7 +50,7 @@
 
 											</div>
 
-											<a href="#" class="">
+											<a href="{{path("app_cart_add", {id: product.id})}}" class="">
 												<img src="{{ asset('/images/cart.svg') }}" class="hover-cart" style="width: 25px" alt="shopping cart">
 											</a>
 										</div>
