feat: add a query search bar

--- a/templates/product/search.html.twig
+++ b/templates/product/search.html.twig
@@ -1,11 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Tous nos produits
+{% block title %}Résultats de recherche
 {% endblock %}
+
 
 {% block body %}
 	<section class="py-12">
-		<h5 class="text-center">Tous nos produits</h5>
+		<h5 class="text-center">Résultats de recherche pour "{{ searchQuery }}"</h5>
 		<div class="container pt-8">
 			<div class="row">
 				<div class="col-12 col-md-12">
