--- a/templates/_partials/_header.html.twig
+++ b/templates/_partials/_header.html.twig
@@ -8,13 +8,16 @@
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="d-none d-xl-flex navbar-collapse ms-12">
-				<div class="d-none d-xl-flex align-items-center pe-2 bg-white rounded-3 ps-4">
+				<form action="{{ path('app_product_search') }}" method="get" class="d-none d-xl-flex align-items-center pe-2 bg-white rounded-3 ps-4">
 					<svg class="flex-shrink-0 me-2" style="width: 24px; height: 18px;" width="18" height="18" viewbox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<path d="M17.5 17.1309L12.5042 11.9551" stroke="black" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
 						<path d="M7.27524 13.8672C10.8789 13.8672 13.8002 10.945 13.8002 7.34033C13.8002 3.73565 10.8789 0.813477 7.27524 0.813477C3.67159 0.813477 0.750244 3.73565 0.750244 7.34033C0.750244 10.945 3.67159 13.8672 7.27524 13.8672Z" stroke="black" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
 					</svg>
-					<input class="form-control me-2 border-0 bg-white" type="text" placeholder="">
-				</div>
+					<input
+					class="form-control me-2 border-0 bg-white" type="search" name="query" placeholder="Rechercher" aria-label="Search">
+
+				{# <button class="btn btn-primary w-100" type="submit">Search</button> #}
+				</form>
 				<ul class="navbar-nav me-2 mb-2 mb-lg-0 mx-auto px-xxl-12">
 					<li class="nav-item">
 						<a class="nav-link" aria-current="page" href="/product">Catalogue</a>
@@ -124,9 +127,11 @@
 		</a>
 	</div>
 </div>
-<a href="">
-	<input class="form-control mb-10 py-5 px-8 bg-light border-0" type="search" placeholder="Search">
-</a>
+<form action="{{ path('app_product_search') }}" method="get">
+	<input class="form-control mb-10 py-5 px-8 bg-light border-0" type="search" name="query" placeholder="Search" aria-label="Search">
+	<button class="btn btn-primary w-100" type="submit">Search</button>
+</form>
+
 <ul class="list-unstyled mb-0 h4">
 	<li class="mb-8">
 		<a class="link-dark text-decoration-none" href="#">Category</a>
