--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -4,10 +4,10 @@
 {% endblock %}
 
 {% block body %}
-	<section class="shopping-cart py-5">
+	<section class="shopping-cart py-12">
 		<div class="container">
-			<h1 class="mb-5">Votre panier</h1>
-			{% if cartItems is empty %}
+			<h5 class="mb-10">Votre panier</h5>
+			{% if data is empty %}
 				<div class="alert alert-info">Votre panier est vide.</div>
 			{% else %}
 				<div class="table-responsive">
@@ -22,7 +22,7 @@
 							</tr>
 						</thead>
 						<tbody>
-							{% for item in cartItems %}
+							{% for item in data %}
 								<tr>
 									<td>
 										<div class="d-flex align-items-center">
@@ -34,24 +34,51 @@
 											{% endif %}
 											<div class="ms-3">
 												<strong>{{ item.product.name }}</strong>
-												<div>{{ item.product.description }}</div>
+												<div class="small-font-size">{{ item.product.description }}</div>
 											</div>
 										</div>
 									</td>
-									<td>{{ (item.product.price / 100) | number_format(2, ',', ' ') }}€</td>
-									<td>{{ item.quantity }}</td>
-									<td>{{ (item.quantity * item.product.price / 100) | number_format(2, ',', ' ') }}€</td>
-									<td>
-										<a href="{{ path('cart_remove', {'id': item.product.id}) }}" class="btn btn-danger btn-sm">Retirer</a>
+									<td class="align-middle">
+										<span>
+											{{ ((item.product.price / 100) - ((item.product.price / 100) * (item.product.discount / 100))) | number_format(2, ',', '') }}€
+										</span>
+
+										{% if item.product.discount > 0 %}
+											<span class="badge bg-success  ms-2">-{{ item.product.discount }}%</span>
+										{% endif %}
 									</td>
+									<td class="align-middle">
+										<span>
+											{{ item.quantity }}
+										</span>
+									</td>
+									<td class="align-middle">{{ (item.quantity * ((item.product.price / 100) - ((item.product.price / 100) * (item.product.discount / 100)))) | number_format(2, ',', ' ') }}€</td>
+
+
+									<td>
+										<a href="{{ path('app_cart_decrease', {'id': item.product.id}) }}" class="btn btn-secondary btn-sm">-</a>
+										<a href="{{ path('app_cart_increase', {'id': item.product.id}) }}" class="btn btn-secondary btn-sm">+</a>
+									</td>
+
 								</tr>
 							{% endfor %}
 						</tbody>
 					</table>
 				</div>
-				<div class="d-flex justify-content-between align-items-center mt-4">
-					<a href="{{ path('product_list') }}" class="btn btn-outline-secondary">Continuer vos achats</a>
-					<a href="{{ path('checkout') }}" class="btn btn-primary">Procéder au paiement</a>
+				<div class="cart-summary mt-4 bg-light p-3 rounded">
+					<div class="d-flex justify-content-between">
+						<span>
+							<strong>Nombre total d'articles :</strong>
+							{{ totalQuantity }}</span>
+						<span>
+							<strong>Prix total :</strong>
+							{{ totalPrice | number_format(2, ',', ' ') }}€</span>
+					</div>
+				</div>
+
+				<div
+					class="d-flex justify-content-between align-items-center mt-4">{# <a href="{{ path('product_list') }}" class="btn btn-outline-secondary">Continuer vos achats</a>
+																																																																																																																													<a href="{{ path('checkout') }}" class="btn btn-primary">Procéder au paiement</a> #}
 				</div>
 			{% endif %}
 		</div>
