--- a/templates/home/sections/findProduct.html.twig
+++ b/templates/home/sections/findProduct.html.twig
@@ -20,7 +20,7 @@
 											{{product.volume}}</div>
 										{% if product.images|length > 0 %}
 											{% set image = product.images.first %}
-											<img src="{{ asset('images/products/' ~ image.imageName) }}" style="width: 200px; height: 150px" class="card-img-top object-fit-cover " alt="...">
+											<img src="{{ asset('images/products/' ~ image.imageName) }}" style="width: 200px; height: 150px" class="card-img-top object-fit-cover pt-5" alt="...">
 										{% else %}
 											<img src="{{ asset('/images/product-placeholder.png') }}" style="width:100%; height: 170px" class="card-img-top object-fit-cover" alt="...">
 
