--- a/templates/product/detail.html.twig
+++ b/templates/product/detail.html.twig
@@ -97,14 +97,7 @@
 
 					</div>
 					<div class="d-flex justify-content-center align-items-center gap-4">
-						{# <div>
-							<a class="text-decoration-none" href="">-</a>
-							<a class="text-decoration-none" href="">
-								<span>Quantité</span>
-							</a>
-							<a class="text-decoration-none" href="">+</a>
-						</div> #}
-						<a href="" class="px-3 py-2 bg-secondary text-light text-decoration-none rounded-3">
+						<a href="{{path("app_cart_add", {id: product.id})}}" class="px-3 py-2 bg-secondary text-light text-decoration-none rounded-3">
 							<span>Ajouter au panier</span>
 						</a>
 					</div>
