--- a/templates/_partials/_header.html.twig
+++ b/templates/_partials/_header.html.twig
@@ -13,8 +13,7 @@
 						<path d="M17.5 17.1309L12.5042 11.9551" stroke="black" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
 						<path d="M7.27524 13.8672C10.8789 13.8672 13.8002 10.945 13.8002 7.34033C13.8002 3.73565 10.8789 0.813477 7.27524 0.813477C3.67159 0.813477 0.750244 3.73565 0.750244 7.34033C0.750244 10.945 3.67159 13.8672 7.27524 13.8672Z" stroke="black" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
 					</svg>
-					<input
-					class="form-control me-2 border-0 bg-white" type="search" name="query" placeholder="Rechercher" aria-label="Search">
+					<input class="form-control me-2 border-0 bg-white" type="search" name="query" placeholder="Rechercher" aria-label="Search">
 				</form>
 				<ul class="navbar-nav me-2 mb-2 mb-lg-0 mx-auto px-xxl-12">
 					<li class="nav-item">
@@ -59,7 +58,6 @@
 								<li>
 									<a class="dropdown-item" href="{{path('app_logout')}}">Se déconnecter</a>
 								</li>
-								{# elseif he is admin	 #}
 							{% elseif is_granted('ROLE_USER') %}
 								<li>
 									<a class="dropdown-item" href="{{path('app_profile')}}">Profil</a>
